welcome.lessons.welcome.methods.slug.SlugHunting.scala.error
SlugHunting:22: error: value prendBiscuit is not a member of Unit
possible cause: maybe a semicolon is missing before `value prendBiscuit'?
  }prendBiscuit()
   ^